Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerText.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        text var = "text"
        return var
    end
end